--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "worker-loader": "^2.0.0"
-  }
+  },
+  "homepage": "."
 }
